--- a/1_LinearRegression.ipynb
+++ b/1_LinearRegression.ipynb
@@ -413,7 +413,7 @@
    "source": [
     "線形回帰モデルの予測\n",
     "\\begin{equation}\n",
-    "\\hat{y} =\\theta_0 + \\theta_1 x_1 + ・・・ + \\theta_n x_n\n",
+    "\\hat{y} =\\theta_0 + \\theta_1 x_1 + \\cdot \\cdot \\cdot+ \\theta_n x_n\n",
     "\\end{equation}\n",
     "\n",
     "- $\\hat{y} $ : 予測された値\n",
@@ -428,7 +428,7 @@
    "source": [
     "ベクトル式で表す\n",
     "\\begin{equation}\n",
-    "\\hat{y} =h_\\theta(x) = \\theta^T ・x\n",
+    "\\hat{y} =h_\\theta(x) = \\theta^T \\cdot x\n",
     "\\end{equation}\n",
     "\n",
     "- $\\theta$: モデルのパラメータベクトル(バイアスの項$\\theta_0, \\theta_1$から$\\theta_n$項までの特徴量の重みを含む)\n",
@@ -458,7 +458,7 @@
     "これを正規方程式と呼ぶ\n",
     "\n",
     "\\begin{equation}\n",
-    "\\hat{\\theta} = (X^T・X)^{-1}・X^T・y\n",
+    "\\hat{\\theta} = (X^T・X)^{-1} \\cdot X^T \\cdot y\n",
     "\\end{equation}\n",
     "\n",
     "- $\\hat{\\theta}$: コスト関数を最小にする$\\theta$\n",
