--- a/1_LinearRegression.ipynb
+++ b/1_LinearRegression.ipynb
@@ -419,7 +419,7 @@
     "- $\\hat{y} $ : 予測された値\n",
     "- n : 特徴量数\n",
     "- $x_i$ : i番目の特徴量\n",
-    "- $\\theta_j$ j番目のモデルのパラメータ(バイアス項$\\theta_0$特徴量の重み$\\theta_1, \\theta_2, ・・・, \\theta_n$を含む)"
+    "- $\\theta_j$ j番目のモデルのパラメータ(バイアス項$\\theta_0$特徴量の重み$\\theta_1, \\theta_2, \\cdot \\cdot \\cdot ,\\theta_n$を含む)"
    ]
   },
   {
@@ -434,7 +434,7 @@
     "- $\\theta$: モデルのパラメータベクトル(バイアスの項$\\theta_0, \\theta_1$から$\\theta_n$項までの特徴量の重みを含む)\n",
     "- $\\theta^T$: $\\theta$の転置\n",
     "- $x$: インスタンスの特徴量ベクトル($x_0$から$x_n$までを含む　ただし$x_0$は1)\n",
-    "- $\\theta^T ・x$:  $\\theta^T$と$x$のドット積\n",
+    "- $\\theta^T \\cdot x$:  $\\theta^T$と$x$のドット積\n",
     "- $h_\\theta$: モデルパラメータ$\\theta$を使った仮説関数"
    ]
   },
