--- a/1_LinearRegression.ipynb
+++ b/1_LinearRegression.ipynb
@@ -445,7 +445,7 @@
     "線形回帰のもっとも一般的な性能指標は`平均二乗誤差(Mean Square Error: MSE)`である\n",
     "\n",
     "\\begin{equation}\n",
-    "MSE(X, h(\\theta)) = \\frac{1}{m}\\sum_{i=1}^{m}(\\theta^T ・x - y^{(i)})^2\n",
+    "MSE(X, h(\\theta)) = \\frac{1}{m}\\sum_{i=1}^{m}(\\theta^T \\cdot x - y^{(i)})^2\n",
     "\\end{equation}"
    ]
   },
@@ -458,7 +458,7 @@
     "これを正規方程式と呼ぶ\n",
     "\n",
     "\\begin{equation}\n",
-    "\\hat{\\theta} = (X^T・X)^{-1} \\cdot X^T \\cdot y\n",
+    "\\hat{\\theta} = (X^T \\cdot X)^{-1} \\cdot X^T \\cdot y\n",
     "\\end{equation}\n",
     "\n",
     "- $\\hat{\\theta}$: コスト関数を最小にする$\\theta$\n",
